Fixed site title from gatsby starter used and improved mobile spacing

--- a/src/styles/components/homeCard.scss
+++ b/src/styles/components/homeCard.scss
@@ -4,6 +4,9 @@
   width: 100%;
   align-items: center;
 
+  h4 {
+    padding-top: 0.66rem;
+  }
 }
 
 .homeCard-container-left {
